--- a/index.html
+++ b/index.html
@@ -5,22 +5,28 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <title>Carolyn E. Wheat</title>
     <meta name="viewport" content="width=device-width, initial-scale=1">
+    <link rel="stylesheet" type="text/css" media="screen" href="assets/css/reset.css">
     <link rel="stylesheet" type="text/css" media="screen" href="assets/css/style.css">
     <script src="assets/script/main.js"></script>
 </head>
-<body>
-    <header><h1>Carolyn E. Wheat </h1>
-    </header>
-    <nav><ul>
-        <li><a href="./index.html">About</a> </li>
-        <li><a href="./portfolio.html">Portfolio</a></li>
-        <li><a href="./contact.html">Contact</a></li>
-    </ul></nav>
-
-    <div>
+<body background="assets/images/background.png">
+    <div id="masthead">
+        <div>
+            <header>Carolyn E. Wheat
+            </header>
+            <nav><ul>
+                <li><a href="./index.html">About</a> </li>
+                <li><a href="./portfolio.html">Portfolio</a></li>
+                <li><a href="./contact.html">Contact</a></li>
+            </ul></nav>
+        </div>
+    </div>
+    <div id="mainContent">
         <h2>About Me</h2>
         <hr>
         <img id="headshot" src="assets/images/headshot.jpg" alt="a photo of me" width="200px" height="200px">
+        <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Aperiam, iste delectus eum facilis, numquam magni quibusdam eius quasi iure voluptates quidem maxime fuga cumque corporis illum quaerat corrupti praesentium reprehenderit!</p>
+        <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Aperiam, iste delectus eum facilis, numquam magni quibusdam eius quasi iure voluptates quidem maxime fuga cumque corporis illum quaerat corrupti praesentium reprehenderit!</p>
         <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Aperiam, iste delectus eum facilis, numquam magni quibusdam eius quasi iure voluptates quidem maxime fuga cumque corporis illum quaerat corrupti praesentium reprehenderit!</p>
     </div>
     <footer>
