--- a/contact.html
+++ b/contact.html
@@ -1,23 +1,27 @@
 <!DOCTYPE html>
 <html>
 <head>
-    <meta charset="utf-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <title>Carolyn E. Wheat</title>
-    <meta name="viewport" content="width=device-width, initial-scale=1">
-    <link rel="stylesheet" type="text/css" media="screen" href="assets/css/style.css">
-    <script src="/assets/script/main.js"></script>
-</head>
-<body>
-    <header><h1>Carolyn E. Wheat</h1>
-    </header>
-    <nav><ul>
-        <li><a href="./index.html">About</a> </li>
-        <li><a href="./portfolio.html">Portfolio</a></li>
-        <li><a href="./contact.html">Contact</a></li>
-    </ul></nav>
-
-    <div>
+        <meta charset="utf-8">
+        <meta http-equiv="X-UA-Compatible" content="IE=edge">
+        <title>Carolyn E. Wheat</title>
+        <meta name="viewport" content="width=device-width, initial-scale=1">
+        <link rel="stylesheet" type="text/css" media="screen" href="assets/css/reset.css">
+        <link rel="stylesheet" type="text/css" media="screen" href="assets/css/style.css">
+        <script src="assets/script/main.js"></script>
+    </head>
+    <body background="assets/images/background.png">
+        <div id="masthead">
+            <div>
+                <header>Carolyn E. Wheat
+                </header>
+                <nav><ul>
+                    <li><a href="./index.html">About</a> </li>
+                    <li><a href="./portfolio.html">Portfolio</a></li>
+                    <li><a href="./contact.html">Contact</a></li>
+                </ul></nav>
+            </div>
+        </div>
+    <div id="mainContent">
         <h2>Contact</h2>
         <hr>
         <form>
