--- a/portfolio.html
+++ b/portfolio.html
@@ -1,28 +1,36 @@
 <!DOCTYPE html>
 <html>
 <head>
-    <meta charset="utf-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <title>Carolyn E. Wheat</title>
-    <meta name="viewport" content="width=device-width, initial-scale=1">
-    <link rel="stylesheet" type="text/css" media="screen" href="assets/css/style.css">
-    <script src="/assets/main.js"></script>
-</head>
-<body>
-    <header><h1>Carolyn E. Wheat</h1>
-    </header>
-    <nav><ul>
-        <li><a href="./index.html">About</a> </li>
-        <li><a href="./portfolio.html">Portfolio</a></li>
-        <li><a href="./contact.html">Contact</a></li>
-    </ul></nav>
-    <div>
+        <meta charset="utf-8">
+        <meta http-equiv="X-UA-Compatible" content="IE=edge">
+        <title>Carolyn E. Wheat</title>
+        <meta name="viewport" content="width=device-width, initial-scale=1">
+        <link rel="stylesheet" type="text/css" media="screen" href="assets/css/reset.css">
+        <link rel="stylesheet" type="text/css" media="screen" href="assets/css/style.css">
+        <script src="assets/script/main.js"></script>
+    </head>
+    <body background="assets/images/background.png">
+        <div id="masthead">
+            <div>
+                <header>Carolyn E. Wheat
+                </header>
+                <nav><ul>
+                    <li><a href="./index.html">About</a> </li>
+                    <li><a href="./portfolio.html">Portfolio</a></li>
+                    <li><a href="./contact.html">Contact</a></li>
+                </ul></nav>
+            </div>
+        </div>
+    <div id="mainContent">
         <h2>Portfolio</h2>
         <hr>
-        <img src="http://lorempixel.com/200/200/animals/8" alt="an animal">
-        <img src="http://lorempixel.com/200/200/animals/9" alt="an animal">
-        <img src="http://lorempixel.com/200/200/animals/10" alt="an animal">
-        <img src="http://lorempixel.com/200/200/animals/1" alt="an animal">
+        <div class="gallery">
+            <img id="img1" src="http://lorempixel.com/200/200/animals/8" alt="an animal"> <label for="img1">A Puppeh</label>
+            <img id="img2" src="http://lorempixel.com/200/200/animals/9" alt="an animal"> <label for="img1">A Doggo</label>
+            <img id="img3" src="http://lorempixel.com/200/200/animals/10" alt="an animal"> <label for="img1">A Big Puppeh</label>
+            <img id="img4" src="http://lorempixel.com/200/200/animals/1" alt="an animal"> <label for="img1">Armored Puppeh</label>
+            <img id="img5" src="http://lorempixel.com/200/200/animals/7" alt="an animal"> <label for="img1">Angry Puppeh</label>
+        </div>
     </div>
     <footer>
         Copyright &copy; 2019 Carolyn E. Wheat
